fix: licence on mobile

--- a/src/components/license/LicensesSection.module.scss
+++ b/src/components/license/LicensesSection.module.scss
@@ -33,6 +33,11 @@
       @media (max-width: 400px) {
         gap: 20px;
       }
+
+      @media (max-width: 350px) {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   }
 
